--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead">
-                    An aspiring developer who're currently a 4th year College Student pursuing BS Computer Science student at Cavite State University - Carmona Campus. A Computer Literate with a prior knowledge and experience in the field of computer programming, technology and software development.
+                    An aspiring developer who is currently a 4th year College Student pursuing BS Computer Science student at Cavite State University - Carmona Campus. A Computer Literate with a prior knowledge and experience in the field of computer programming, technology and software development.
                     </p>
                     
                     <p>
