--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <a href="Resume_.pdf" class="btn btn--stroke full-width">Open Resume</a>
                 </div>
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="intro.html" class="btn btn--stroke full-width" >Open CV</a>
+                    <a href="Jhenrich De Vera Roquios - cv.pdf" class="btn btn--stroke full-width" >Open CV</a>
                     
                 </div>
             </div>
