--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead">
-                    An aspiring developer who is currently a 4th year College Student pursuing BS Computer Science student at Cavite State University - Carmona Campus. A Computer Literate with a prior knowledge and experience in the field of computer programming, technology and software development.
+                        An aspiring developer who is currently a 4th year College Student pursuing BS Computer Science at Cavite State University - Carmona Campus. A Computer literate with a prior knowledge and experience in the field of computer programming, technology, software development and web development.
                     </p>
                     
                     <p>
-                        As I presently pursuing BS Computer Science, I gain various experience, knowledge and skills about software development, game development, and web development. Recently, we as a team developed a RPG game. I also love to explore programming by creating various codes and games using Programming Language such as Python. 
+                        During my On-the-Job Training (OJT), I gained a lot of knowledge, practices and experience in web development. I was exposed in using Laravel Framework in tall stack approach where i placed as a back-end developer. Those experiences help me a lot in real-world situation where i now use my experiences and knowledge for our capstone project.
                     </p>
 
                 </div>
@@ -336,6 +336,29 @@
                     </div>
                 </div> <!-- end masonry__brick -->
 
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                            
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/champ.png" class="thumb-link" title="Scholar's Journey" data-size="1050x700">
+                                <img src="images/portfolio/champ.png" 
+                                     srcset="images/portfolio/champ.png 1x, images/portfolio/champ.png 2x" alt="">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                CHAMP
+                            </h4>
+                            <p class="item-folio__cat">
+                                Web Development (Laravel)
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p>CHAMP Hub is a website that aims to create a online hub for the employees of the company where they can share their problems, share and read God's words and wisdom, and connect to other employee and champ groups.</p>
+                        </div>
+                    </div>
+                </div> <!-- end masonry__brick -->
+
             </div> <!-- end masonry -->
 
         </div> <!-- end masonry-wrap -->
@@ -354,7 +377,7 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="mailto:#0">jhenrich.roquios@cvsu.edu.ph</a>
+                    <a href="mailto:#0">jhenrichroquios000@gmail.com</a>
                 </p>
             </div>
         </div>
