--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <ul class="header-social">
                 <li><a href="https://www.facebook.com/bartzabell.bartzabel"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/Bartzabelll"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/Bartzabell"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/bulbasau_r_r/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
