--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <h4>Social</h4>
                 <ul>
                     <li><a href="https://www.facebook.com/bartzabell.bartzabel" title="Facebook">Facebook</a></li>
-                    <li><a href="https://github.com/Bartzabelll" title="Github">Github</a></li>
+                    <li><a href="https://github.com/Bartzabell" title="Github">Github</a></li>
                     <li><a href="https://www.instagram.com/bulbasau_r_r/" title="Instagram">Instagram</a></li>
                 </ul>
             </div>
