--- a/intro.html
+++ b/intro.html
@@ -53,7 +53,7 @@ States</a></li>
 <h2 id="contact">Contact</h2>
 <ul>
 <li>Email: <a href="mailto:jhenrich.roquios@cvsu.edu.ph">jhenrich.roquios@cvsu.edu.ph</a></li>
-<li>Github: <a href="https://github.com/Bartzabelll">https://github.com/Bartzabelll</a></li>
+<li>Github: <a href="https://github.com/Bartzabell">https://github.com/Bartzabell</a></li>
 <li>Phone: <a>+63 950-473-8498</a>
 </ul>
 <h1 id="education">Education</h1>
