--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </p>
                     
                     <p>
-                        During my On-the-Job Training (OJT), I gained a lot of knowledge, practices and experience in web development. I was exposed in using Laravel Framework in tall stack approach where i placed as a back-end developer. Those experiences help me a lot in real-world situation where i now use my experiences and knowledge for our capstone project.
+                        During my On-the-Job Training (OJT), I gained a lot of knowledge, practices and experience in web development. I was exposed in using Laravel Framework in TALLstack (tailwind CSS, Alpine.js, Laravel, Livewire) approach where i placed as a back-end developer. Those experiences help me a lot in real-world situation where i now use my experiences and knowledge for our capstone project. I also learn how to use Github repositories for version control and collaborative development, learned to work with the SDLC approach, learned to use Object-Oriented Programming (OOP) principles, and create user stories using taiga.io.
                     </p>
 
                 </div>
