--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </table>
                 </div>            
             </div>
-            <div class="p-5 mt-4 border-l-2 border-white">
+            <div class="p-5 mt-4 border-l-2 border-teal-200">
                 <div class="mt-5 space-x-5 mx-2 items-center justify-center flex" x-data="{ activeButton: 'contact' }">
                     <button 
                         @click="activeButton = (activeButton === 'project') ? null : 'project'; project = !project; gallery = false; contact = false"
