--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h3 class="font-bold text-2xl mb-2 text-teal-500">Hello, I'm</h3>
                     <h1 class="font-black text-teal-200 text-5xl mb-1 tracking-widest"><span class="text-6xl font-black">J</span>henrich <span class="text-6xl font-black">D</span>. <span class="text-6xl font-black">R</span>oquios</h1>
                     <h3 class="mb-5 text-teal-500 pl-10">I am a Web Developer</h3>
-                    <div class="indent-5 text-justify p-3 text-xl leading-loose bg-white bg-opacity-75 rounded-lg" x-show="!drop && !drop2 && !drop3"  x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
+                    <div class="indent-5 text-justify p-3 text-xl leading-loose bg-white border border-teal-200 shadow-lg shadow-black rounded-lg" x-show="!drop && !drop2 && !drop3"  x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
                         <p>
                             <span class="text-3xl font-black">A</span> graduate with a Bachelor's Degree in Computer Science, has a strong passion for the field of development. Currently working as a web developer, with extensive experience in collaborative development and version control. Eager to learn new technologies and continuously adapting to updates in technologies and AI, aiming to expand my knowledge in development and contribute significantly to innovative projects.
                         </p>
@@ -140,7 +140,7 @@
                     <h1 class="font-black text-3xl border-b-2 border-teal-200 p-2 text-center">Experience/s</h1>
                     <table class="min-w-full bg-white border border-gray-300">
                         <thead>
-                            <tr class="text-black uppercase text-sm">
+                            <tr class="text-black uppercase text-sm bg-teal-600">
                                 <th class="py-2 px-4 border">Year</th>
                                 <th class="py-2 px-4 border">Company</th>
                                 <th class="py-2 px-4 border">Position</th>
