--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h3 class="font-bold text-2xl mb-2 text-violet-500">Hello, I'm</h3>
                     <h1 class="font-black font-engravers text-indigo-900 text-4xl mb-1 tracking-widest">Jhenrich D. Roquios</h1>
                     <h3 class="mb-5 text-violet-700 pl-10 font-bold">I am a Web Developer</h3>
-                    <div class="indent-5 text-justify py-3 px-5 text-xl leading-loose bg-white rounded-xl" x-show="!drop && !drop2 && !drop3"  x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
+                    <div class="indent-5 text-justify py-3 px-5 text-xl leading-loose bg-white bg-opacity-75 rounded-xl" x-show="!drop && !drop2 && !drop3"  x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
                         <p class="font-arial font-medium">
                             <span class="text-5xl font-bold font-engravers">A</span> graduate with a <span class="font-bold text-indigo-900">Bachelor's Degree in Computer Science</span>, has a strong passion for the field of development. Currently working as a web developer, with extensive experience in collaborative development and version control. Eager to learn new technologies and continuously adapting to updates in technologies and AI, aiming to expand my knowledge in development and contribute significantly to innovative projects.
                         </p>
@@ -69,7 +69,7 @@
                     </button>
                 </div>                
                 
-                <div x-show="drop" class="bg-white p-3 mt-2 rounded-lg" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5" >
+                <div x-show="drop" class="bg-white p-3 mt-2 rounded-lg bg-opacity-75" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5" >
                     <p class="indent-5 text-justify leading-relaxed ">
                         <span class="text-3xl font-black font-engravers">M</span>y interest in the IT field began in high school when I took ICT as my TLE subject in 9th grade. That’s where I learned my first IT skills, such as computer troubleshooting, hardware basics, and gained insights into various areas of IT.
                 
