--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <a href="mailto:jhenrichroquios000@gmail.com" class="text-gray-700 hover:underline">jhenrichroquios000@gmail.com</a>
                     </div>
                     <div class="m-5 flex items-center space-x-2">
-                        
+                        <img src="img/facebook-icon.svg"  class="size-6">
                         <a href="www.facebook.com" class="text-gray-700 hover:underline">www.facebook.com</a>
                     </div>
                     <div class="m-5 flex items-center space-x-2">
