--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
         <script src="tailwind-config.js"></script>
+        <link rel="icon" href="img/face-button.png" type="image/png">
+        <title>JDR Portfolio</title>
     </head>
     <body class="font-roboto" x-data="{ move: false, drop:false, drop2:false, drop3: false, project: false, contact: true, gallery:false }">
         <div class="bg-gradient-to-b from-violet-500 via-fuchsia-300 to-fuchsia-100 w-full h-full flex justify-center items-center relative">
