--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="img/face-button.png" type="image/png">
         <title>JDR Portfolio</title>
     </head>
-    <body class="font-roboto" x-data="{ move: false, drop:false, drop2:false, drop3: false, project: false, contact: true, gallery:false, isModalOpen: false }">
+    <body class="font-roboto" x-data="{ move: false, drop:false, drop2:false, drop3: false, project: false, contact: true, gallery:false, isModalOpen: false, jumpingCar: true }">
         <div class="bg-gradient-to-b from-violet-500 via-fuchsia-300 to-fuchsia-100 w-full h-full flex justify-center items-center relative">
             <button 
                 :class="move ? 'fixed m-5 transition-transform duration-1000 transform translate-y-[-300px] translate-x-[-5px]' 
@@ -159,7 +159,7 @@
                         <h1>Quality Assurance System</h1>
                     </div>
                     <div class="m-2 shadow-md">
-                        <img src="img/qa-system.png" alt="QA - System" @click="isModalOpen = true">
+                        <img src="img/qa-system.png" alt="QA - System" @click="isModalOpen = true ; jumpingCar = false">
                     </div>
                 </div>
                 
@@ -196,15 +196,19 @@
                 </div>     
             </div>
         </div>
-        <div 
-            x-show="isModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-            <!-- Modal Content -->
-            <div class="bg-white p-5 rounded-lg shadow-lg max-w-md w-full mx-4" @click.outside="isModalOpen = false">
-                <h2 class="text-2xl">Modal Title</h2>
-                <p>Modal content goes here...</p>
+        <div x-show="isModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+            <div class="bg-white p-5 rounded-lg shadow-lg max-w-md h-auto w-auto mx-4" @click.outside="isModalOpen = false ; jumpingCar = true">
+                <h2 class="text-2xl">Quality Assurance System</h2>
+                <img src="img/qa-system.png">
+                <button @click="isModalOpen = false ; jumpingCar = true" class="mt-3 bg-violet-600 text-white p-2 rounded-lg">Close</button>
             </div>
         </div>
-
+        <div x-show="move">
+            <div x-show="jumpingCar" class="inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+                <div class="bg-white p-5 rounded-lg shadow-lg max-w-md h-full w-auto mx-4">
+                </div>
+            </div>
+        </div>
         <div x-show="move" x-data="{ direction: 'goright' }"
             class="car"
             x-init="
