--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 
-                <div x-show="contact" class=" bg-white rounded-lg grid grid-cols-2 border my-2 pb-5 ml-5" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
+                <div x-show="contact" class=" bg-white rounded-lg grid grid-cols-2 border my-2 pb-5 ml-5 bg-opacity-75" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
                     <h1 class="font-black text-3xl border-b-2 border-violet-200 p-2 col-span-2 text-center">Contact</h1>
                     <div class="m-5 flex items-center space-x-2">
                         <img src="img/gmail-icon.svg" class="size-6">
@@ -191,33 +191,48 @@
                     </div>
                 </div>
                 
-                <div x-show="gallery" class=" bg-white rounded-lg border my-2 pb-5" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
+                <div x-show="gallery" class=" bg-white rounded-lg border my-2 pb-5 bg-opacity-75" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
                     <h1 class="font-black text-3xl border-b-2 border-violet-200 p-2 text-center">Gallery</h1>
                 </div>     
             </div>
         </div>
-        <div x-show="isModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-            <div class="bg-white p-5 rounded-lg shadow-lg max-w-md h-auto w-auto mx-4" @click.outside="isModalOpen = false ; jumpingCar = true">
-                <h2 class="text-2xl">Quality Assurance System</h2>
-                <img src="img/qa-system.png">
-                <button @click="isModalOpen = false ; jumpingCar = true" class="mt-3 bg-violet-600 text-white p-2 rounded-lg">Close</button>
+        <div x-show="isModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
+            x-transition:enter="transition ease-out duration-300"
+            x-transition:enter-start="opacity-0 transform scale-90"
+            x-transition:enter-end="opacity-100 transform scale-100"
+            x-transition:leave="transition ease-in duration-300"
+            x-transition:leave-start="opacity-100 transform scale-100"
+            x-transition:leave-end="opacity-0 transform scale-90"
+            x-cloak>
+            <div class="bg-white p-5 rounded-lg shadow-lg h-auto mx-4 overflow-auto max-h-screen">
+                <h2 class="text-2xl text-center">Quality Assurance System</h2>
+                <div class="overflow-y-auto h-64 p-5">
+                    <h1 class="text-center">Dashboard</h1>
+                    <img src="img/qa-system.png" class="max-w-2xl h-auto border border-black">
+                    <h1 class="text-center">Create</h1>
+                    <img src="img/qa-system.png" class="max-w-2xl h-auto border border-black">
+                </div>
+                <button @click="isModalOpen = false; jumpingCar = true" class="mt-3 bg-violet-600 text-white p-2 rounded-lg">Close</button>
             </div>
-        </div>
+        </div>                
         <div x-show="move">
             <div x-show="jumpingCar" class="inset-0 bg-black bg-opacity-50 flex items-center justify-center">
                 <div class="bg-white p-5 rounded-lg shadow-lg max-w-md h-full w-auto mx-4">
                 </div>
             </div>
         </div>
-        <div x-show="move" x-data="{ direction: 'goright' }"
-            class="car"
+        <div x-show="move" x-data="{ go: true, direction: 'goright' }"
+            :class="go ? 'car' : 'car stopped'"
+            @click="go = !go" 
             x-init="
                 const changeDirection = () => {
                     direction = (direction === 'goright') ? 'goleft' : 'goright';
                 };
                 setInterval(() => {
-                    changeDirection();
-                }, 10000); 
+                    if (go) {
+                        changeDirection();
+                    }
+                }, 10000);
             ">
             <img :src="'img/' + direction + '.svg'" alt="car walking" style="width: 100%; height: auto;">
         </div>
