--- a/index.html
+++ b/index.html
@@ -155,13 +155,27 @@
                         <img src="img/gallery-icon.svg" class="size-8">
                     </button>
                 </div>
-                <div x-show="project" class=" bg-white bg-opacity-75 rounded-lg grid grid-cols-2 border my-2 pb-5" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
+                <div x-show="project" class="bg-white bg-opacity-75 rounded-lg border my-2 pb-5" x-transition:enter="transition ease-out duration-500" x-transition:enter-start="opacity-0 transform translate-y-5" x-transition:enter-end="opacity-100 transform translate-y-0" x-transition:leave="transition ease-in duration-500" x-transition:leave-start="opacity-100 transform translate-y-0" x-transition:leave-end="opacity-0 transform translate-y-5">
                     <h1 class="font-black text-3xl border-b-2 border-violet-200 p-2 col-span-2 text-center">Project</h1>
-                    <div class="flex p-2 justify-center align-center items-center">
-                        <h1 class="font-bold">Quality Assurance System</h1>
-                    </div>
-                    <div class="m-2 shadow-md">
-                        <img src="img/qa-system.png" alt="QA - System" @click="isModalOpen = true ; jumpingCar = false">
+                    <div class="overflow-y-auto h-96 grid grid-cols-2">
+                        <div class="flex p-2 justify-center align-center items-center">
+                            <h1 class="font-bold">Appointment Scheduling System</h1>
+                        </div>
+                        <div class="bg-violet-500 bg-opacity-50 p-5 ">
+                            <img src="img/qa-system.png" alt="QA - System" @click="isModalOpen = true ; jumpingCar = false">
+                        </div>
+                        <div class="bg-violet-500 bg-opacity-50 p-5 ">
+                            <img src="img/qa-system.png" alt="QA - System" @click="isModalOpen = true ; jumpingCar = false">
+                        </div>
+                        <div class="flex p-2 justify-center align-center items-center">
+                            <h1 class="font-bold">Production Report System</h1>
+                        </div>
+                        <div class="flex p-2 justify-center align-center items-center">
+                            <h1 class="font-bold">Production Report System</h1>
+                        </div>
+                        <div class="bg-violet-500 bg-opacity-50 p-5 ">
+                            <img src="img/qa-system.png" alt="QA - System" @click="isModalOpen = true ; jumpingCar = false">
+                        </div>
                     </div>
                 </div>
                 
