--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
                     </div>
                     <div class="m-5 flex items-center space-x-2">
                         <img src="img/facebook-icon.svg"  class="size-6">
-                        <a href="www.facebook.com" class="text-gray-700 hover:underline">www.facebook.com</a>
+                        <a href="https://www.facebook.com/bartzabell.bartzabel" class="text-gray-700 hover:underline">Jhenrich Roquios</a>
                     </div>
                     <div class="m-5 flex items-center space-x-2">
                         <img src="img/instagram-icon.svg"  class="size-6">
-                        <a href="www.instagram.com" class="text-gray-700 hover:underline">www.instagram.com</a>
+                        <a href="https://www.instagram.com/bulbasau_r_r/profilecard/?igsh=ODI4Mm1iand6bWZ3" class="text-gray-700 hover:underline">@bulbasau_r_r</a>
                     </div>
                     <div class="m-5 flex items-center space-x-2">
                         <img src="img/github-icon.svg"  class="size-6">
-                        <a href="www.github.com" class="text-gray-700 hover:underline">www.github.com</a>
+                        <a href="https://github.com/Bartzabell" class="text-gray-700 hover:underline">Bartzabell</a>
                     </div>
                     <div class="m-5 flex items-center space-x-2">
                         <img src="img/linkedin-icon.svg"  class="size-6">
